--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: OCR-A;
+
 }
 
 a {
@@ -13,4 +13,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+@font-face {
+  font-family: "OCR-A";
+  src: url("../public/ocr-a/OCR-A.ttf");
+  font-style: normal;
+  font-display: swap;
 }
