--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,12 @@
   font-display: swap;
 }
 
+h1{
+  font-size: 4rem;
+  font-weight: bold;
+  color: rgb(37, 37, 37);
+}
+
 html,
 body {
   padding: 0;
@@ -28,7 +34,36 @@ img{
 
 }
 
+
+
 .red{
   background-color: red;
 }
+
+body { background-color: #333; }
+pre { 
+	margin: 20px; padding: 20px; 
+	color: #aaa; background-color: #222;
+	white-space: pre; text-shadow: 0 1px 0 #000;
+	border-radius: 15px; border-bottom: 1px solid #555;
+	box-shadow: 0 1px 5px rgba(0,0,0,0.4) inset, 0 0 20px rgba(0,0,0,0.2) inset;
+	font: 16px/24px 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+	}
+
+  
+
+  @media (min-width: 1050px) { 
+    img{
+      width: 60%;
+    }
+   }
+
+  .bannerImg{
+    height: 500px;
+    background-image: url('https://blog.golemproject.net/content/images/size/w2000/2019/03/download--1-.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #333;
+  }
 
